--- a/config/database.yml
+++ b/config/database.yml
@@ -8,7 +8,7 @@ development:
   username: root
   password:
   host: localhost
-  database: protospace-41924_development
+  database: protospace_41924_development
 
 test:
   <<: *default
@@ -16,7 +16,7 @@ test:
   username: root
   password:
   host: localhost
-  database: protospace-41924_test
+  database: protospace_41924_test
 
 production:
   <<: *default
